--- a/cart-page/cart-page.html
+++ b/cart-page/cart-page.html
@@ -25,23 +25,23 @@
     </header>
     <div class='cart'>
         <div class="cart__container">
-            <h2 class="cart__title">Корзина пустая</h2>
-            <p class="cart__text">Вероятней всего, вы еще не сделали заказ.</p>
-            <p class="cart__text">Для того, чтобы сделать заказ, перейдите на главную страницу.</p>
+            <h2 class="cart__title">Кошик пустий</h2>
+            <p class="cart__text">Найімовірніше, ви ще не зробили замовлення.</p>
+            <p class="cart__text">Щоб зробити замовлення, перейдіть на головну сторінку.</p>
             <img class="cart__image" src="../assets/img/shopping-cart.png" alt='shopping-image'/>
-            <a class="cart__link" href="../index.html">Вернуться назад</a>
+            <a class="cart__link" href="../index.html">Повернутися назад</a>
         </div>
         <div class="cart-full__container">
             <div class="cart__container-top">
-                <h2 class="cart__title cart__title-second">Корзина</h2>
-                <button class="cart__button-clear">Очистить корзину</button>
+                <h2 class="cart__title cart__title-second">Кошик</h2>
+                <button class="cart__button-clear">Очистити корзину</button>
             </div> 
             <div class="cart__container-middle">
             </div>
             <div class="cart__container-bottom">
                 <div class="cart__container-bottom-buttons">
-                    <a class="cart__button-back" href="../index.html">Вернуться назад</a>
-                    <button class="cart__button-pay">Оплатить сейчас</button>
+                    <a class="cart__button-back" href="../index.html">Повернуться назад</a>
+                    <button class="cart__button-pay">Оплатити зараз</button>
                 </div>
             </div>
         </div>
